--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Francois+One" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -29,19 +30,59 @@
                     <i class="fas fa-graduation-cap"></i>
                     <em>EDUCATION</em>
             </div>
+            <div class="aca">Armenian Code Academy <i>(ACA)</i></div>
+            <form><i>09/2018 - still now </i></form>
             <div class="faculty">
                 Faculty of Mathematics and Mechanics<br>
                 <i><i class="fas fa-university"></i>  Yerevan State University</i>
             </div>
             <form><i>09/2013 - 05/2017</i></form>
-            <div class="aca">Armenian Code Academy <i>(ACA)</i></div>
-            <form><i>09/2018 - still now </i></form>
+            <form class="school">School N54 (Named after Manuel Kajuni)</form>
         </div>
 		<div class="skill">
 			<em><ins>SKILLS</ins></em>
 		</div>
         <div class="skills">
-            <p>JavaScript // React // HTML5 / CSS3 //Git</p>
+            <div class="js">
+                JavaScript 
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot1"></span>
+            </div>
+            <div class="react">
+                React
+                <span class="dot"></span>
+                <span class="dot1"></span>
+                <span class="dot1"></span>
+                <span class="dot1"></span>
+                <span class="dot1"></span>
+            </div>
+            <div class="html">
+                HTML5
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot1"></span>
+            </div>
+            <div class="css">
+                CSS3
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot1"></span>
+            </div>
+            <div class="git">
+                GIT
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot1"></span>
+            </div>
         </div>
         <div id="about-me">
         	<em>About me</em>
