--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 		</div><hr>
 		<div class="educationall">
             <div class="education">
-                    <i class="fas fa-graduation-cap"></i>
-                    <em>EDUCATION</em>
+                    <i class="fas fa-graduation-cap" style="color: black"></i><em>EDUCATION</em>
             </div>
             <div class="aca">Armenian Code Academy <i>(ACA)</i></div>
             <form><i>09/2018 - still now </i></form>
@@ -40,11 +39,11 @@
             <form class="school">School N54 (Named after Manuel Kajuni)</form>
         </div>
 		<div class="skill">
-			<em><ins>SKILLS</ins></em>
+			<em>SKILLS</em>
 		</div>
         <div class="skills">
             <div class="js">
-                JavaScript 
+                <i class="fab fa-js"></i> JavaScript 
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -52,7 +51,7 @@
                 <span class="dot1"></span>
             </div>
             <div class="react">
-                React
+                <i class="fab fa-react"></i> React
                 <span class="dot"></span>
                 <span class="dot1"></span>
                 <span class="dot1"></span>
@@ -60,7 +59,7 @@
                 <span class="dot1"></span>
             </div>
             <div class="html">
-                HTML5
+                <i class="fab fa-html5"></i> HTML5
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -68,7 +67,7 @@
                 <span class="dot1"></span>
             </div>
             <div class="css">
-                CSS3
+                <i class="fab fa-css3-alt"></i> CSS3
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -76,7 +75,7 @@
                 <span class="dot1"></span>
             </div>
             <div class="git">
-                GIT
+                <i class="fab fa-github github"></i> GIT
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -89,7 +88,7 @@
         </div>
         <div id="text"></div> 
         <div class="social">
-        	<a href="https://twitter.com/LiliPotoyan" target="_blank" ><i class="fab fa-twitter twitter"></i>
+        	<a href="https://twitter.com/LiliPotoyan" target="_blank"><i class="fab fa-twitter twitter"></i>
         	<a href="https://github.com/lilpotoyan" target="_blank"><i class="fab fa-github github"></i>
         	<a href="https://www.facebook.com/lilit.potoyan" target="_blank"><i class="fab fa-facebook-square facebook"></i>
         </div>
