--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         	<a href="https://twitter.com/LiliPotoyan" target="_blank" title="Twitter"><i class="fab fa-twitter twitter"></i>
         	<a href="https://github.com/lilpotoyan" target="_blank" title="Github"><i class="fab fa-github github"></i>
         	<a href="https://www.facebook.com/lilit.potoyan" target="_blank" title="Facebook"><i class="fab fa-facebook-square facebook"></i>
-        	<a href="https://www.linkedin.com/in/lilit-potoyan-169562176/" title="Linkedin"><i class="fab fa-linkedin linkedin"></i>
+        	<a href="https://www.linkedin.com/in/lilit-potoyan-169562176/" target="_blank" title="Linkedin"><i class="fab fa-linkedin linkedin"></i>
         </div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
