--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <i class="fas fa-graduation-cap" style="color: black"></i><em>EDUCATION</em>
             </div>
             <div class="aca">Armenian Code Academy <i>(ACA)</i></div>
-            <form><i>09/2018 - still now </i></form>
+            <form><i>09/2018 - Till now </i></form>
             <div class="faculty">
                 Faculty of Mathematics and Mechanics<br>
                 <i><i class="fas fa-university"></i>  Yerevan State University</i>
@@ -82,11 +82,12 @@
                 <span class="dot"></span>
                 <span class="dot1"></span>
             </div>
+            <div class="else"> ~Agile/Scrum, Redux, Webpack, SPSS </div>
         </div>
         <div id="about-me">
         	<em>About me</em>
         </div>
-        <div id="text"></div> 
+        <div id="text" style="padding: inherit">I am Lilit Potoyan, 22, front-end developer, from Yerevan Armenia. I am a Greduate student of Yerevan State University the Faculty of Mathematics and Mechanics, Department of Actuarial and Financial Mathematics. Now I am studying JavaScript and React at Armenian Code Academy. I want to develop my skills in the specific field and become promoted and demandable specialist. As an individual I am very active and sociable, as both friendship and communication are inseperable part in our life. In addition, I strongly appreciate honesty, loyalty and devotion. Moreover I am open to new opportunities, hard-working and self-development is of great importance. I pay attention to details as much as possible because I think that in many cases even a small detail can change everything totally. So I can be not only a team member but also a team leader.</div> 
         <div class="social">
         	<a href="https://twitter.com/LiliPotoyan" target="_blank" title="Twitter"><i class="fab fa-twitter twitter"></i>
         	<a href="https://github.com/lilpotoyan" target="_blank" title="Github"><i class="fab fa-github github"></i>
